--- a/OpenStreetMap/packages.config
+++ b/OpenStreetMap/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="OptimizedPriorityQueue" version="4.1.1" targetFramework="net452" />
   <package id="OsmSharp" version="5.0.8" targetFramework="net452" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net452" />
 </packages>
