--- a/OpenStreetMap/OpenStreetMap.csproj
+++ b/OpenStreetMap/OpenStreetMap.csproj
@@ -52,11 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dijkstra.cs" />
     <Compile Include="Edge.cs" />
     <Compile Include="Map.cs" />
-    <Compile Include="Node.cs" />
-    <Compile Include="PriorityQueue.cs" />
+    <Compile Include="Vertex.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.cs" />
