--- a/OpenStreetMap/OpenStreetMap.csproj
+++ b/OpenStreetMap/OpenStreetMap.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Vertex.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Test.cs" />
+    <Compile Include="Dijkstra.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
